# olinker

./: Cargo.toml  README.md
examples/: basic_chatbot.rs  chat_api_chatbot.rs  completion_with_options.rs  images_to_ollama.rs  options_from_json.rs  structured_output.rs
scripts/: Modelfile  test_setup.sh
src/: error.rs  lib.rs
src/admin/: copy.rs  create.rs  delete.rs  list_local.rs  pull.rs  push.rs  show_info.rs
src/generation/: options.rs
src/generation/chat/: mod.rs
src/generation/completion/: mod.rs
src/generation/embeddings/: mod.rs
tests/: code_completion.rs  copy_model.rs  create_model.rs  delete_model.rs  embeddings_generation.rs  generation.rs  list_local_models.rs  pull_model.rs  push_model.rs  send_chat_messages.rs  show_model_info.rs
