[package]
name = "olinker"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A library natively linking ollama and rust code"
repository = "https://github.com/mcmah309/olinker"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15"}
url = "2" # todo rem
async-stream = "0.3.5"
http = {version = "1.1.0"}

[features]
default = []
rustls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.22.0"
schemars = "0.8.21"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]